[gd_scene load_steps=6 format=3 uid="uid://hr756cx0syfv"]

[ext_resource type="Script" path="res://card.gd" id="1_cbw46"]
[ext_resource type="Texture2D" uid="uid://dex3r40nu5350" path="res://cards/default100.png" id="2_73fvn"]
[ext_resource type="Texture2D" uid="uid://bkhg7vxs4yqsd" path="res://frame4.png" id="2_e0s3v"]
[ext_resource type="FontFile" uid="uid://c2crqvwp2kqvd" path="res://Font Awesome 6 Free-Solid-900.otf" id="2_ohxj3"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_yp1jo"]

[node name="Card" type="Panel"]
offset_right = 150.0
offset_bottom = 150.0
script = ExtResource("1_cbw46")

[node name="CardVisual" type="Sprite2D" parent="."]
position = Vector2(49.875, 62.75)
scale = Vector2(0.092041, 0.0678711)
texture = SubResource("CompressedTexture2D_yp1jo")

[node name="MainVisual" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 44.0
offset_right = 145.0
offset_bottom = 145.0
texture = ExtResource("2_73fvn")
expand_mode = 1

[node name="CardEffect" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 47.0
offset_right = 98.0
offset_bottom = 120.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/normal_font = ExtResource("2_ohxj3")
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "-"

[node name="CardCost" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 132.0
offset_right = 93.0
offset_bottom = 144.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/normal_font = ExtResource("2_ohxj3")
theme_override_font_sizes/normal_font_size = 10
bbcode_enabled = true
text = "a b c"

[node name="CardFrame" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_e0s3v")
offset = Vector2(50, 50)

[node name="CardTitle" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 5.0
offset_right = 145.0
offset_bottom = 34.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/bold_font_size = 12
bbcode_enabled = true
scroll_active = false
